[gd_scene load_steps=8 format=3 uid="uid://18mqgnolj4qo"]

[ext_resource type="Script" path="res://Main/Game.gd" id="1_xd1mh"]
[ext_resource type="Texture2D" uid="uid://bdqpb3k7ihe2f" path="res://Assets/Purple_Nebula_02-1024x1024.png" id="2_npi2q"]
[ext_resource type="PackedScene" uid="uid://chy53u1oct6dc" path="res://Main/Game_Background.tscn" id="3_7ur0w"]
[ext_resource type="PackedScene" uid="uid://c4hmahrvnb20p" path="res://Main/WorldBoundry.tscn" id="4_6tvsn"]
[ext_resource type="PackedScene" uid="uid://5dsoww67mhkm" path="res://SoundController/SoundController.tscn" id="5_u16yn"]
[ext_resource type="PackedScene" uid="uid://db05i3oqg0ap6" path="res://Main/HUD.tscn" id="6_r0m0a"]

[sub_resource type="PackedScene" id="PackedScene_4pyir"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("Control", "layout_mode", "anchors_preset", "anchor_right", "anchor_bottom", "offset_right", "offset_bottom", "grow_horizontal", "grow_vertical", "size_flags_horizontal", "size_flags_vertical", "TextureRect", "scale", "texture"),
"node_count": 2,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 0, 0, -1, 10, 1, 0, 2, 1, 3, 2, 4, 2, 5, 3, 6, 4, 7, 5, 8, 5, 9, 0, 10, 0, 0, 0, 0, 11, 11, -1, 10, 1, 6, 2, 1, 3, 2, 4, 2, 5, 7, 6, 7, 7, 5, 8, 5, 12, 8, 13, 9, 0),
"variants": [3, 15, 1.0, -1152.0, -648.0, 2, 1, 1024.0, Vector2(2, 2), ExtResource("2_npi2q")],
"version": 3
}

[node name="Game" type="Node"]
script = ExtResource("1_xd1mh")
background = SubResource("PackedScene_4pyir")

[node name="Game_Background" parent="." instance=ExtResource("3_7ur0w")]

[node name="WorldBoundry" parent="." instance=ExtResource("4_6tvsn")]

[node name="SoundController" parent="." instance=ExtResource("5_u16yn")]

[node name="MobTimer" type="Timer" parent="."]

[node name="HUD" parent="." groups=["HUD"] instance=ExtResource("6_r0m0a")]

[node name="PlayerTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="timeout" from="MobTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PlayerTimer" to="." method="_on_player_timer_timeout"]
